--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.0",
+    "@types/dateformat": "^5.0.0",
     "@types/jest": "^27.4.1",
     "@types/node": "17.0.23",
     "@types/react": "^17.0.43",
@@ -234,6 +235,7 @@
   "dependencies": {
     "@node-steam/vdf": "^2.2.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "dateformat": "^5.0.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.6",
     "electron-updater": "^4.6.5",
