--- a/package.json
+++ b/package.json
@@ -168,6 +168,7 @@
     "@types/node": "17.0.23",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.17",
+    "@types/react-outside-click-handler": "^1.3.1",
     "@types/react-test-renderer": "^17.0.2",
     "@types/terser-webpack-plugin": "^5.0.4",
     "@types/webpack-bundle-analyzer": "^4.4.1",
@@ -243,6 +244,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^6.3.0",
     "regedit": "^5.1.1",
     "rxjs": "^7.5.5",
