--- a/package.json
+++ b/package.json
@@ -242,6 +242,7 @@
     "electron-updater": "^4.6.5",
     "history": "^5.3.0",
     "react": "^18.1.0",
+    "react-colorful": "^5.5.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-outside-click-handler": "^1.3.0",
