--- a/package.json
+++ b/package.json
@@ -240,6 +240,7 @@
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.7",
     "electron-updater": "^4.6.5",
+    "framer-motion": "^6.3.13",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-colorful": "^5.5.1",
