--- a/package.json
+++ b/package.json
@@ -239,6 +239,7 @@
     "dateformat": "^5.0.3",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.7",
+    "electron-store": "^8.0.2",
     "electron-updater": "^4.6.5",
     "framer-motion": "^6.3.13",
     "history": "^5.3.0",
