--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "@types/react-outside-click-handler": "^1.3.1",
     "@types/react-test-renderer": "^17.0.2",
     "@types/terser-webpack-plugin": "^5.0.4",
+    "@types/uuid": "^8.3.4",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-env": "^1.17.0",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
