--- a/package.json
+++ b/package.json
@@ -227,6 +227,7 @@
     "@node-steam/vdf": "^2.2.0",
     "@reduxjs/toolkit": "^1.8.3",
     "dateformat": "^5.0.3",
+    "dot-prop": "^7.2.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.7",
     "electron-store": "^8.0.2",
