--- a/package.json
+++ b/package.json
@@ -238,6 +238,7 @@
     "react": "^18.2.0",
     "react-colorful": "^5.5.1",
     "react-dom": "^18.2.0",
+    "react-fitty": "^1.0.1",
     "react-icons": "^4.4.0",
     "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^6.3.0",
