add ctrlc-windows to natives modules

--- a/release/app/package.json
+++ b/release/app/package.json
@@ -13,6 +13,8 @@
     "link-modules": "node -r ts-node/register ../../.erb/scripts/link-modules.ts",
     "postinstall": "npm run electron-rebuild && npm run link-modules"
   },
-  "dependencies": {},
+  "dependencies": {
+    "ctrlc-windows": "^2.0.0"
+  },
   "license": "MIT"
 }
