check if is online

--- a/package.json
+++ b/package.json
@@ -233,6 +233,7 @@
     "electron-updater": "^5.0.5",
     "framer-motion": "^6.5.1",
     "history": "^5.3.0",
+    "is-online": "^9.0.1",
     "react": "^18.2.0",
     "react-colorful": "^5.5.1",
     "react-dom": "^18.2.0",
