better app icon

--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "win": {
       "target": [
         "nsis"
-      ]
+      ],
+      "icon": "assets/favicon.ico"
     },
     "linux": {
       "target": [
