--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@types/archiver": "^5.3.1",
     "@types/dateformat": "^5.0.0",
     "@types/jest": "^27.5.2",
     "@types/node": "17.0.23",
@@ -226,6 +227,7 @@
   },
   "dependencies": {
     "@node-steam/vdf": "^2.2.0",
+    "archiver": "^5.3.1",
     "dateformat": "^5.0.3",
     "dot-prop": "^7.2.0",
     "electron-debug": "^3.2.0",
