--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           npm install
           npm run postinstall
-          npm run build
+          npm run package
       - name: Publish releases
         env:
           CSC_LINK: ${{ secrets.CSC_LINK }}
