--- a/package.json
+++ b/package.json
@@ -238,6 +238,7 @@
     "react-fitty": "^1.0.1",
     "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^6.3.0",
+    "react-visibility-sensor": "^5.1.1",
     "regedit": "^5.1.1",
     "rxjs": "^7.5.6",
     "tailwind-scrollbar-hide": "^1.1.7",
