--- a/package.json
+++ b/package.json
@@ -232,6 +232,7 @@
     "framer-motion": "^7.2.1",
     "history": "^5.3.0",
     "is-online": "^9.0.1",
+    "md5-file": "^5.0.0",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
