--- a/package.json
+++ b/package.json
@@ -243,6 +243,7 @@
     "react-visibility-sensor": "^5.1.1",
     "regedit": "^5.1.1",
     "rxjs": "^7.5.6",
+    "semver": "^7.3.8",
     "tailwind-scrollbar-hide": "^1.1.7",
     "uuid": "^9.0.0"
   },
