--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
     "@types/react-outside-click-handler": "^1.3.1",
     "@types/react-test-renderer": "^17.0.2",
     "@types/terser-webpack-plugin": "^5.0.4",
+    "@types/use-double-click": "^1.0.1",
     "@types/uuid": "^8.3.4",
     "@types/webpack-bundle-analyzer": "^4.4.2",
     "@types/webpack-env": "^1.18.0",
@@ -245,6 +246,7 @@
     "rxjs": "^7.5.6",
     "semver": "^7.3.8",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "use-double-click": "^1.0.5",
     "uuid": "^9.0.0"
   },
   "devEngines": {
