--- a/package.json
+++ b/package.json
@@ -246,6 +246,7 @@
     "rxjs": "^7.5.6",
     "semver": "^7.3.8",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss-scoped-groups": "^2.0.0",
     "use-double-click": "^1.0.5",
     "uuid": "^9.0.0"
   },
