--- a/package.json
+++ b/package.json
@@ -200,6 +200,7 @@
     "postcss": "^8.4.16",
     "postcss-loader": "^6.2.1",
     "prettier": "^2.7.1",
+    "ps-scrollbar-tailwind": "0.0.1",
     "react-refresh": "^0.12.0",
     "react-refresh-typescript": "^2.0.7",
     "react-test-renderer": "^18.2.0",
