--- a/package.json
+++ b/package.json
@@ -240,6 +240,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-fitty": "^1.0.1",
+    "react-range": "^1.8.14",
     "react-router-dom": "^6.3.0",
     "react-visibility-sensor": "^5.1.1",
     "regedit": "^5.1.1",
