--- a/package.json
+++ b/package.json
@@ -232,6 +232,7 @@
     "electron-store": "^8.1.0",
     "electron-updater": "^5.2.4",
     "framer-motion": "^7.2.1",
+    "fs-extra": "^10.1.0",
     "history": "^5.3.0",
     "is-online": "^9.0.1",
     "md5-file": "^5.0.0",
