--- a/package.json
+++ b/package.json
@@ -231,6 +231,7 @@
     "electron-log": "^4.4.8",
     "electron-store": "^8.1.0",
     "electron-updater": "^5.2.4",
+    "fast-deep-equal": "^3.1.3",
     "framer-motion": "^7.2.1",
     "fs-extra": "^10.1.0",
     "history": "^5.3.0",
