--- a/package.json
+++ b/package.json
@@ -224,6 +224,7 @@
   },
   "dependencies": {
     "@node-steam/vdf": "^2.2.0",
+    "@tippyjs/react": "^4.2.6",
     "archiver": "^5.3.1",
     "dateformat": "^5.0.3",
     "dot-prop": "^7.2.0",
@@ -237,6 +238,7 @@
     "history": "^5.3.0",
     "is-online": "^9.0.1",
     "md5-file": "^5.0.0",
+    "node-fetch": "^3.3.0",
     "node-stream-zip": "^1.15.0",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
