--- a/package.json
+++ b/package.json
@@ -242,7 +242,6 @@
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
-    "react-fitty": "^1.0.1",
     "react-range": "^1.8.14",
     "react-router-dom": "^6.3.0",
     "react-visibility-sensor": "^5.1.1",
@@ -253,7 +252,8 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-scoped-groups": "^2.0.0",
     "use-delayed-state": "^1.2.0",
-    "use-double-click": "^1.0.5"
+    "use-double-click": "^1.0.5",
+    "use-fit-text": "^2.4.0"
   },
   "devEngines": {
     "node": ">=14.x",
