--- a/package.json
+++ b/package.json
@@ -246,6 +246,7 @@
     "react-range": "^1.8.14",
     "react-router-dom": "^6.3.0",
     "regedit": "^5.1.1",
+    "rfdc": "^1.3.0",
     "rxjs": "^7.5.6",
     "sanitize-filename": "^1.6.3",
     "semver": "^7.3.8",
