--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     },
     "win": {
       "target": [
-        "nsis"
+        "nsis",
+        "nsis-web"
       ],
       "icon": "assets/favicon.ico",
       "certificateSha1": "f3363a89b084f8f6b616babea3c91f9d79e15000"
