--- a/package.json
+++ b/package.json
@@ -226,6 +226,8 @@
   "dependencies": {
     "@node-steam/vdf": "^2.2.0",
     "@tippyjs/react": "^4.2.6",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/react-window": "^1.8.5",
     "archiver": "^5.3.1",
     "dateformat": "^5.0.3",
     "dot-prop": "^7.2.0",
@@ -246,6 +248,8 @@
     "react-dom": "^18.2.0",
     "react-range": "^1.8.14",
     "react-router-dom": "^6.3.0",
+    "react-virtualized-auto-sizer": "^1.0.7",
+    "react-window": "^1.8.8",
     "regedit": "^5.1.1",
     "rfdc": "^1.3.0",
     "rxjs": "^7.5.6",
