--- a/package.json
+++ b/package.json
@@ -228,6 +228,7 @@
     "@tippyjs/react": "^4.2.6",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/react-window": "^1.8.5",
+    "@types/recursive-readdir": "^2.2.1",
     "archiver": "^5.3.1",
     "dateformat": "^5.0.3",
     "dot-prop": "^7.2.0",
@@ -250,6 +251,7 @@
     "react-router-dom": "^6.3.0",
     "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^1.8.8",
+    "recursive-readdir": "^2.2.3",
     "regedit": "^5.1.1",
     "rfdc": "^1.3.0",
     "rxjs": "^7.5.6",
