--- a/package.json
+++ b/package.json
@@ -77,8 +77,7 @@
         "nsis",
         "nsis-web"
       ],
-      "icon": "assets/favicon.ico",
-      "certificateSha1": "f3363a89b084f8f6b616babea3c91f9d79e15000"
+      "icon": "assets/favicon.ico"
     },
     "linux": {
       "target": [
@@ -154,6 +153,7 @@
     "@types/dateformat": "^5.0.0",
     "@types/jest": "^27.5.2",
     "@types/node": "17.0.23",
+    "@types/node-fetch": "^2.6.3",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "@types/react-outside-click-handler": "^1.3.1",
@@ -242,7 +242,7 @@
     "history": "^5.3.0",
     "is-online": "^9.0.1",
     "md5-file": "^5.0.0",
-    "node-fetch": "^3.3.0",
+    "node-fetch": "^2.6.7",
     "node-stream-zip": "^1.15.0",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
