--- a/package.json
+++ b/package.json
@@ -259,6 +259,7 @@
     "rxjs": "^7.8.0",
     "sanitize-filename": "^1.6.3",
     "semver": "^7.3.8",
+    "striptags": "^4.0.0-alpha.4",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-scoped-groups": "^2.0.0",
     "tippy.js": "^6.3.7",
