--- a/package.json
+++ b/package.json
@@ -244,6 +244,7 @@
     "fs-extra": "^11.1.1",
     "history": "^5.3.0",
     "is-online": "^9.0.1",
+    "jszip": "^3.10.1",
     "md5-file": "^5.0.0",
     "node-fetch": "^2.6.7",
     "node-stream-zip": "^1.15.0",
