--- a/package.json
+++ b/package.json
@@ -248,6 +248,7 @@
     "md5-file": "^5.0.0",
     "node-fetch": "^2.6.7",
     "node-stream-zip": "^1.15.0",
+    "ps-list": "^8.1.1",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
