--- a/release/app/package.json
+++ b/release/app/package.json
@@ -14,7 +14,8 @@
     "postinstall": "npm run electron-rebuild && npm run link-modules"
   },
   "dependencies": {
-    "ctrlc-windows": "^2.1.0"
+    "ctrlc-windows": "^2.1.0",
+    "ps-list": "^7.2.0"
   },
   "license": "MIT"
 }
