ci: add automated testing
Doesn't actually succeed yet because there are quite a few errors.

--- a/.github/workflows/node.js.yaml
+++ b/.github/workflows/node.js.yaml
@@ -26,5 +26,6 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build
-    # Tests are currently failing
-    # - run: npm test
+    - run: npm test
+      # Currently typescript, eslint, and prettier are unhappy
+      continue-on-error: true
