--- a/package.json
+++ b/package.json
@@ -136,7 +136,7 @@
     ],
     "moduleDirectories": [
       "node_modules",
-      "release/app/node_modules"
+      "src"
     ],
     "testPathIgnorePatterns": [
       "release/app/dist"
