--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "start:preload": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.preload.dev.ts",
         "start:renderer": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack serve --config ./.erb/configs/webpack.config.renderer.dev.ts",
         "test": "jest",
-        "publish": "npm run build && electron-builder --publish always --win --x64"
+        "publish": "npm run build && electron-builder -c.win.certificateSha1=f3363a89b084f8f6b616babea3c91f9d79e15000 --publish always --win --x64"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx}": [
@@ -76,8 +76,7 @@
                 "nsis",
                 "nsis-web"
             ],
-            "icon": "assets/favicon.ico",
-            "certificateSha1": "f3363a89b084f8f6b616babea3c91f9d79e15000"
+            "icon": "assets/favicon.ico"
         },
         "linux": {
             "target": [
