--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bs-manager",
-  "version": "1.3.0",
+  "version": "1.3.1-alpha.1",
   "description": "BSManager",
   "main": "./dist/main/main.js",
   "author": {
