--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -23,6 +23,8 @@ jobs:
               with:
                   node-version: 18.x
                   cache: "npm"
+
+            - name: Install dependencies
               run: npm ci
             
             - name: Build
