--- a/release/app/package.json
+++ b/release/app/package.json
@@ -14,8 +14,8 @@
     "postinstall": "npm run electron-rebuild && npm run link-modules"
   },
   "dependencies": {
-    "@resvg/resvg-js": "^2.4.1",
-    "ps-list": "^7.2.0"
+    "ps-list": "^7.2.0",
+    "sharp": "^0.32.6"
   },
   "license": "MIT"
 }
