--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -38,7 +38,7 @@ jobs:
             
             - name: Upload test results
               if: always()
-              uses: actions/checkout@v3
+              uses: actions/upload-artifact@v3
               with:
                   name: playwright-output
                   path: test-results
