[chore] test bypass auto update

--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -41,4 +41,5 @@ jobs:
               uses: actions/upload-artifact@v3
               with:
                   name: playwright-output
-                  path: test-results
+                  path: test-results/
+
