[feature-274] the script for download and verify oculus game works

--- a/package.json
+++ b/package.json
@@ -232,6 +232,7 @@
         "@electron/fuses": "^1.6.2",
         "@node-steam/vdf": "^2.2.0",
         "@tippyjs/react": "^4.2.6",
+        "@types/pako": "^2.0.1",
         "archiver": "^6.0.1",
         "color": "^4.2.3",
         "dateformat": "^5.0.3",
@@ -249,6 +250,7 @@
         "node-abi": "^3.47.0",
         "node-fetch": "^2.6.7",
         "node-stream-zip": "^1.15.0",
+        "pako": "^2.1.0",
         "ps-list": "^7.2.0",
         "qrcode.react": "^3.1.0",
         "react": "^18.2.0",
