--- a/.github/workflows/e2e-tests.yaml
+++ b/.github/workflows/e2e-tests.yaml
@@ -26,6 +26,9 @@ jobs:
 
             - name: Install dependencies
               run: npm ci
+
+            - name: Install Playwright deps
+              run: npx playwright install --with-deps
             
             - name: Build
               run: npm run build
