--- a/package.json
+++ b/package.json
@@ -266,6 +266,7 @@
         "rxjs": "^7.8.0",
         "sanitize-filename": "^1.6.3",
         "semver": "^7.5.4",
+        "serialize-error": "^8.1.0",
         "striptags": "^4.0.0-alpha.4",
         "tailwind-scrollbar-hide": "^1.1.7",
         "tailwindcss-scoped-groups": "^2.0.0",
