--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     },
     "build": {
         "extraResources": [
+            "./assets/favicon.ico",
             "./assets/jsons/bs-versions.json",
             "./assets/jsons/patreons.json",
             "./assets/scripts/**"
