--- a/package.json
+++ b/package.json
@@ -239,6 +239,7 @@
         "archiver": "^6.0.1",
         "color": "^4.2.3",
         "dateformat": "^5.0.3",
+        "dompurify": "^3.0.6",
         "dot-prop": "^8.0.2",
         "electron-debug": "^3.2.0",
         "electron-log": "^4.4.8",
