--- a/package.json
+++ b/package.json
@@ -156,6 +156,7 @@
         "@types/archiver": "^5.3.1",
         "@types/color": "^3.0.3",
         "@types/dateformat": "^5.0.0",
+        "@types/dompurify": "^3.0.5",
         "@types/jest": "^27.5.2",
         "@types/node": "17.0.23",
         "@types/node-fetch": "^2.6.3",
