[chore] disable download oculus version with Meta login
+ Add possibility to store token with password

--- a/package.json
+++ b/package.json
@@ -236,8 +236,10 @@
         "@electron/fuses": "^1.6.2",
         "@node-steam/vdf": "^2.2.0",
         "@tippyjs/react": "^4.2.6",
+        "@types/crypto-js": "^4.2.1",
         "archiver": "^6.0.1",
         "color": "^4.2.3",
+        "crypto-js": "^4.2.0",
         "dateformat": "^5.0.3",
         "dot-prop": "^8.0.2",
         "electron-debug": "^3.2.0",
