--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     },
     "devDependencies": {
         "@electron/rebuild": "^3.2.13",
+        "@playwright/test": "^1.38.1",
         "@pmmmwh/react-refresh-webpack-plugin": "0.5.5",
         "@teamsupercell/typings-for-css-modules-loader": "^2.5.1",
         "@testing-library/jest-dom": "^5.16.5",
@@ -177,6 +178,7 @@
         "@types/webpack-env": "^1.18.0",
         "@typescript-eslint/eslint-plugin": "^5.34.0",
         "@typescript-eslint/parser": "^5.34.0",
+        "asar": "^3.2.0",
         "autoprefixer": "^10.4.8",
         "browserslist-config-erb": "^0.0.3",
         "chalk": "^4.1.2",
@@ -210,6 +212,8 @@
         "lint-staged": "^12.5.0",
         "mini-css-extract-plugin": "^2.6.1",
         "opencollective-postinstall": "^2.0.3",
+        "playwright": "^1.38.1",
+        "playwright-core": "^1.38.1",
         "postcss": "^8.4.16",
         "postcss-loader": "^6.2.1",
         "prettier": "^2.7.1",
@@ -234,11 +238,7 @@
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.10.0",
         "webpack-merge": "^5.8.0",
-        "playwright": "^1.38.1",
-        "playwright-core": "^1.38.1",
-        "@playwright/test": "^1.38.1",
-        "xvfb-maybe": "^0.2.1",
-        "asar": "^3.2.0"
+        "xvfb-maybe": "^0.2.1"
     },
     "dependencies": {
         "@electron/fuses": "^1.6.2",
