--- a/release/app/package.json
+++ b/release/app/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "ps-list": "^7.2.0",
+    "query-process": "^0.0.3",
     "regedit-rs": "^1.0.2",
     "sharp": "^0.32.6"
   },
