[feature-107] add file associations for .bplist (not completed)

--- a/package.json
+++ b/package.json
@@ -96,7 +96,10 @@
         "publish": {
             "provider": "github",
             "owner": "Zagrios"
-        }
+        },
+        "fileAssociations": [
+            { "ext": "bplist", "description": "Beat Saber Playlist", "icon": "./assets/favicon.ico", "role": "Viewer" }
+        ]
     },
     "repository": {
         "type": "git",
