--- a/package.json
+++ b/package.json
@@ -100,7 +100,12 @@
             "owner": "Zagrios"
         },
         "fileAssociations": [
-            { "ext": "bplist", "description": "Beat Saber Playlist (BSManager)", "icon": "./assets/bsm_file.ico", "role": "Viewer" }
+            {
+                "ext": "bplist",
+                "description": "Beat Saber Playlist (BSManager)",
+                "icon": "./assets/bsm_file.ico",
+                "role": "Viewer"
+            }
         ]
     },
     "repository": {
@@ -164,6 +169,7 @@
         "@types/color": "^3.0.3",
         "@types/crypto-js": "^4.2.1",
         "@types/dateformat": "^5.0.0",
+        "@types/got": "^9.6.12",
         "@types/jest": "^29.5.11",
         "@types/node": "20.11.15",
         "@types/node-fetch": "^2.6.3",
@@ -254,6 +260,7 @@
         "fast-deep-equal": "^3.1.3",
         "framer-motion": "^11.0.3",
         "fs-extra": "^11.2.0",
+        "got": "^14.2.0",
         "history": "^5.3.0",
         "is-elevated": "^4.0.0",
         "jszip": "^3.10.1",
@@ -262,6 +269,7 @@
         "node-fetch": "^3.3.2",
         "node-stream-zip": "^1.15.0",
         "pako": "^2.1.0",
+        "protobufjs": "^7.2.6",
         "qrcode.react": "^3.1.0",
         "react": "^18.2.0",
         "react-colorful": "^5.6.1",
