--- a/release/app/package.json
+++ b/release/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bs-manager",
-  "version": "1.4.4",
+  "version": "1.5.0",
   "description": "BSManager",
   "main": "./dist/main/main.js",
   "author": {
@@ -19,5 +19,8 @@
     "regedit-rs": "^1.0.2",
     "sharp": "^0.33.2"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "volta": {
+    "node": "20.11.0"
+  }
 }
