[chore] use resvg-js@2.6.1-beta.0 instead of sharp; Waiting the release of v2.6.1 to merge into master

--- a/release/app/package.json
+++ b/release/app/package.json
@@ -14,10 +14,10 @@
     "postinstall": "npm run electron-rebuild && npm run link-modules"
   },
   "dependencies": {
+    "@resvg/resvg-js": "2.6.1-beta.0",
     "ps-list": "^7.2.0",
     "query-process": "^0.0.3",
-    "regedit-rs": "^1.0.2",
-    "sharp": "^0.32.6"
+    "regedit-rs": "^1.0.2"
   },
   "license": "MIT"
 }
