[feature-107] we can now download playlist from beatsaver + other internal changes

--- a/package.json
+++ b/package.json
@@ -251,6 +251,7 @@
         "@node-steam/vdf": "^2.2.0",
         "@tippyjs/react": "^4.2.6",
         "archiver": "^6.0.1",
+        "clsx": "^2.1.1",
         "color": "^4.2.3",
         "crypto-js": "^4.2.0",
         "dateformat": "^5.0.3",
@@ -289,6 +290,7 @@
         "semver": "^7.6.0",
         "serialize-error": "^11.0.3",
         "striptags": "^4.0.0-alpha.4",
+        "tailwind-merge": "^2.3.0",
         "tailwind-scrollbar-hide": "^1.1.7",
         "tailwindcss-scoped-groups": "^2.0.0",
         "tippy.js": "^6.3.7",
