[chore] self-contained depotdownload works on linux

--- a/package.json
+++ b/package.json
@@ -64,7 +64,10 @@
             "target": [
                 "AppImage"
             ],
-            "category": "Development"
+            "category": "Development",
+            "extraResources": [
+                "./assets/scripts/DepotDownloader"
+            ]
         },
         "directories": {
             "app": "release/app",
