--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
         "@types/node-fetch": "^2.6.3",
         "@types/pako": "^2.0.1",
         "@types/react": "^18.0.33",
+        "@types/react-beautiful-dnd": "^13.1.8",
         "@types/react-dom": "^18.0.11",
         "@types/react-outside-click-handler": "^1.3.1",
         "@types/react-test-renderer": "^18.0.7",
@@ -258,6 +259,7 @@
         "qrcode.react": "^3.1.0",
         "query-process": "^0.0.3",
         "react": "^18.2.0",
+        "react-beautiful-dnd": "^13.1.1",
         "react-colorful": "^5.6.1",
         "react-dom": "^18.2.0",
         "react-range": "^1.8.14",
