[feature-107] some fixes

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
         "extraResources": [
             "./assets/favicon.ico",
             "./assets/jsons/bs-versions.json",
-            "./assets/jsons/patreons.json"
+            "./assets/jsons/patreons.json",
+            "./assets/proto/song_details_cache_v1.proto"
         ],
         "productName": "BSManager",
         "appId": "org.erb.BSManager",
