--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
                 "AppImage"
             ],
             "icon": "./build/icons/png",
-            "category": "Development",
+            "category": "Utility;Game;",
             "extraResources": [
                 "./build/icons/png",
                 "./assets/scripts/DepotDownloader"
