--- a/package.json
+++ b/package.json
@@ -248,6 +248,7 @@
         "electron-store": "^8.1.0",
         "electron-updater": "^6.2.1",
         "fast-deep-equal": "^3.1.3",
+        "format-duration": "^3.0.2",
         "framer-motion": "^11.2.6",
         "fs-extra": "^11.2.0",
         "got": "^14.4.1",
