[chore] update to electron 31 + update deps

--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
     "name": "bs-manager",
     "description": "Manage maps, mods and more for Beat Saber",
-    "main": "./src/main/main.ts",
+    "main": "./.erb/dll/main.bundle.dev.js",
     "version": "1.5.0-alpha.2",
     "scripts": {
-        "build-rust-scripts": "node -r esbuild-register ./.erb/scripts/build-rust-scripts.js",
+        "build-rust-scripts": "ts-node ./.erb/scripts/build-rust-scripts.js",
         "build": "concurrently \"npm run build:main\" \"npm run build:renderer\"",
         "build:dll": "cross-env NODE_ENV=development webpack --config ./.erb/configs/webpack.config.renderer.dev.dll.ts",
         "build:main": "cross-env NODE_ENV=production webpack --config ./.erb/configs/webpack.config.main.prod.ts",
         "build:renderer": "cross-env NODE_ENV=production webpack --config ./.erb/configs/webpack.config.renderer.prod.ts",
-        "postinstall": "node -r esbuild-register .erb/scripts/check-native-dep.js && electron-builder install-app-deps && npm run build:dll",
+        "postinstall": "ts-node .erb/scripts/check-native-dep.js && electron-builder install-app-deps && npm run build:dll",
         "rebuild": "electron-rebuild --parallel --types prod,dev,optional --module-dir release/app",
+        "prestart": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.main.dev.ts",
         "lint": "cross-env NODE_ENV=development eslint . --ext .js,.jsx,.ts,.tsx",
-        "package": "node -r esbuild-register ./.erb/scripts/clean.js dist && npm run build && electron-builder build --publish never && npm run build:dll",
-        "start": "node -r esbuild-register ./.erb/scripts/check-port-in-use.js && npm run start:renderer",
-        "start:main": "cross-env NODE_ENV=development NODE_OPTIONS=\"--loader esbuild-register/loader -r esbuild-register\" electronmon .",
-        "start:preload": "cross-env NODE_ENV=development webpack --config ./.erb/configs/webpack.config.preload.dev.ts",
-        "start:renderer": "cross-env NODE_ENV=development webpack serve --config ./.erb/configs/webpack.config.renderer.dev.ts",
+        "package": "ts-node ./.erb/scripts/clean.js dist && npm run build && electron-builder build --publish never && npm run build:dll",
+        "start": "ts-node ./.erb/scripts/check-port-in-use.js && npm run prestart && npm run start:renderer",
+        "start:main": "concurrently -k \"cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --watch --config ./.erb/configs/webpack.config.main.dev.ts\" \"electronmon .\"",
+        "start:preload": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.preload.dev.ts",
+        "start:renderer": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack serve --config ./.erb/configs/webpack.config.renderer.dev.ts",
         "test": "jest",
         "publish": "npm run build && electron-builder -c.win.certificateSha1=842a817a51e2a1d360fcd62f54bf5f9193e919e1 --publish always --win --x64",
         "publish:linux": "npm run build && electron-builder --publish always --linux --x64"
@@ -182,12 +183,10 @@
         "css-loader": "^6.10.0",
         "css-minimizer-webpack-plugin": "^6.0.0",
         "detect-port": "^1.5.1",
-        "electron": "^28.2.4",
+        "electron": "^31.3.0",
         "electron-builder": "^24.13.3",
         "electron-devtools-installer": "^3.2.0",
         "electronmon": "^2.0.2",
-        "esbuild": "^0.20.1",
-        "esbuild-register": "^3.5.0",
         "eslint": "^8.56.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-erb": "^4.1.0",
@@ -210,15 +209,13 @@
         "postcss": "^8.4.33",
         "postcss-loader": "^8.1.0",
         "prettier": "^3.2.4",
-        "ps-scrollbar-tailwind": "0.0.1",
         "react-refresh": "^0.14.0",
         "react-test-renderer": "^18.2.0",
         "rimraf": "^5.0.5",
         "sass": "^1.70.0",
         "sass-loader": "^14.1.0",
         "style-loader": "^3.3.4",
-        "tailwind-scrollbar": "^3.1.0",
-        "tailwindcss": "^3.4.1",
+        "tailwindcss": "^3.4.7",
         "terser-webpack-plugin": "^5.3.10",
         "ts-jest": "^29.1.2",
         "ts-loader": "^9.5.1",
@@ -236,7 +233,7 @@
         "@nextui-org/react": "^2.3.6",
         "@node-steam/vdf": "^2.2.0",
         "@tippyjs/react": "^4.2.6",
-        "archiver": "^6.0.1",
+        "archiver": "^7.0.1",
         "clsx": "^2.1.1",
         "color": "^4.2.3",
         "crypto-js": "^4.2.0",
@@ -251,7 +248,7 @@
         "format-duration": "^3.0.2",
         "framer-motion": "^11.2.6",
         "fs-extra": "^11.2.0",
-        "got": "^14.4.1",
+        "got": "^14.4.2",
         "history": "^5.3.0",
         "is-elevated": "^4.0.0",
         "jszip": "^3.10.1",
@@ -272,14 +269,13 @@
         "react-virtualized-auto-sizer": "^1.0.24",
         "react-window": "^1.8.10",
         "recursive-readdir": "^2.2.3",
-        "rfdc": "^1.3.1",
+        "rfdc": "^1.4.1",
         "rxjs": "^7.8.1",
         "sanitize-filename": "^1.6.3",
-        "semver": "^7.6.2",
+        "semver": "^7.6.3",
         "serialize-error": "^11.0.3",
         "striptags": "^4.0.0-alpha.4",
         "tailwind-merge": "^2.4.0",
-        "tailwind-scrollbar-hide": "^1.1.7",
         "tailwindcss-scoped-groups": "^2.0.0",
         "tippy.js": "^6.3.7",
         "to-ico": "^1.1.5",
@@ -317,9 +313,9 @@
     },
     "electronmon": {
         "patterns": [
-            "!src/__tests__/**",
-            "!release/**",
-            "!assets/**"
+            "!**/**",
+            "src/main/**",
+            ".erb/dll/**"
         ],
         "logLevel": "quiet"
     },
