--- a/release/app/package.json
+++ b/release/app/package.json
@@ -9,9 +9,9 @@
     "url": "https://github.com/Zagrios/bs-manager"
   },
   "scripts": {
-    "electron-rebuild": "node -r esbuild-register ../../.erb/scripts/electron-rebuild.js",
-    "link-modules": "node -r esbuild-register ../../.erb/scripts/link-modules.ts",
-    "postinstall": "npm run electron-rebuild && npm run link-modules"
+    "rebuild": "node -r ts-node/register ../../.erb/scripts/electron-rebuild.js",
+    "link-modules": "node -r ts-node/register ../../.erb/scripts/link-modules.ts",
+    "postinstall": "npm run rebuild && npm run link-modules"
   },
   "dependencies": {
     "@resvg/resvg-js": "2.6.2",
