--- a/.github/workflows/labeler.yaml
+++ b/.github/workflows/labeler.yaml
@@ -10,14 +10,14 @@ jobs:
     steps:
     - name: Add Linux label
       if: |
-        contains(toLower(github.event.issue.title), 'linux') ||
-        contains(toLower(github.event.issue.body), 'linux') ||
-        contains(toLower(github.event.issue.title), 'ubuntu') ||
-        contains(toLower(github.event.issue.body), 'ubuntu') ||
-        contains(toLower(github.event.issue.title), 'arch') ||
-        contains(toLower(github.event.issue.body), 'arch') ||
-        contains(toLower(github.event.issue.title), 'kde') ||
-        contains(toLower(github.event.issue.body), 'kde')
+        contains(github.event.issue.title, 'linux') ||
+        contains(github.event.issue.body, 'linux') ||
+        contains(github.event.issue.title, 'ubuntu') ||
+        contains(github.event.issue.body, 'ubuntu') ||
+        contains(github.event.issue.title, 'arch') ||
+        contains(github.event.issue.body, 'arch') ||
+        contains(github.event.issue.title, 'kde') ||
+        contains(github.event.issue.body, 'kde')
       uses: actions-ecosystem/action-add-labels@v1
       with:
         github_token: ${{ secrets.GH_TOKEN }}
