--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -16,3 +16,5 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: Andrew-Chen-Wang/github-wiki-action@v4
+        with:
+          path: docs/wiki/
