--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -4,7 +4,7 @@ on:
     branches: [master]
     paths:
       - docs/wiki/**
-      - .github/workflows/publish-wiki.yml
+      - .github/workflows/docs.yml
 concurrency:
   group: publish-wiki
   cancel-in-progress: true
