--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "start:preload": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack --config ./.erb/configs/webpack.config.preload.dev.ts",
         "start:renderer": "cross-env NODE_ENV=development TS_NODE_TRANSPILE_ONLY=true webpack serve --config ./.erb/configs/webpack.config.renderer.dev.ts",
         "test": "jest",
-        "publish": "npm run build && electron-builder -c.win.certificateSha1=842a817a51e2a1d360fcd62f54bf5f9193e919e1 --publish always --win --x64",
+        "publish": "npm run build && electron-builder -c.win.certificateSha1=2164d6a7d641ecf6ad57852f665a518ca2bf960f --publish always --win --x64",
         "publish:linux": "npm run build && electron-builder --publish always --linux --x64"
     },
     "lint-staged": {
@@ -53,6 +53,7 @@
         "afterSign": ".erb/scripts/notarize.js",
         "afterPack": ".erb/scripts/after-pack.js",
         "win": {
+            "signingHashAlgorithms": ["sha256"],
             "target": [
                 "nsis",
                 "nsis-web"
