--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -22,7 +22,7 @@ jobs:
             - name: Use Node.js
               uses: actions/setup-node@v4
               with:
-                  node-version: 18.x
+                  node-version: 22.11.0
                   cache: "npm"
             - run: npm ci
             - run: npm run package
